# upk

./: .gitignore  CHANGELOG.md  DEB_PACKAGING.md  LICENSE  MANIFEST.in  README.md  VERSION  build.sh  config.py  display.py  pyproject.toml  search.py  setup.py  upk.py  utils.py
.github/workflows/: release.yml
backends/: appimage.py  apt.py  base.py  flatpak.py  pacstall.py  snap.py
templates/DEBIAN/: control  postinst  postrm
templates/usr/share/doc/upk/: README.Debian  changelog.Debian  copyright
upk/: display.py  search.py  upk.py  utils.py
upk/backends/: __init__.py  appimage.py  apt.py  base.py  flatpak.py  pacstall.py
