[project]
name = "upk"
dynamic = ["version"]
description = "Ubuntu Package Kit - Universal package manager wrapper"
authors = [{name = "undefinederror (Lorenzo Paci)"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
upk = "upk:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
